# barrage

./: .gitignore  AGENTS.md  LICENSE  README.md  justfile  mkosi.conf  pyproject.toml
.github/workflows/: ci.yml
barrage/: __init__.py  __main__.py  assertions.py  case.py  colorize.py  discovery.py  environ.py  result.py  runner.py  selector.py  singleton.py  subprocess.py  taskgroups.py
mkosi.tools.conf/: mkosi.conf
mkosi.tools.conf/mkosi.conf.d/: arch.conf  fedora.conf
tests/: _interactive_stdin_helper.py  test_environ.py  test_framework.py  test_selector.py  test_singleton.py  test_subprocess.py  test_taskgroups.py
tests/_sample_discover/: test_sample.py
